# home_work_controll

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
alembic/: env.py
alembic/versions/: b2066cd8c550_initial_migration.py
app/: main.py
app/core/config/: config.py
app/core/database/: base_repository.py  database.py
app/modules/: __init__.py  routers.py
app/modules/orders/: models.py  repository.py  router.py  schemas.py
app/modules/products/: models.py  repository.py  router.py  schemas.py
app/modules/users/: models.py  repository.py  router.py  schemas.py
