[tool.poetry]
name = "home-work-controll"
version = "0.1.0"
description = ""
authors = ["kochenov <kochenof@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
gunicorn = "^21.2.0"
asyncpg = "^0.29.0"
fastapi-pagination = "^0.12.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
